--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
     "node-fetch": "^3.3.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
